Fix RecipeService and mappings, add test cases for RecipeController